testsuite/tests/saks/should_fail/saks_fail001.stderr

saks_fail001.hs:8:1: error:
    Illegal standalone kind signature
      Did you mean to enable StandaloneKindSignatures?
